--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xdls",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "A cross-domain local storage library.",
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "vinyl-source-stream": "^1.0.0"
   },
   "dependencies": {
-    "localforage": "^1.1.1"
+    "localforage": "^1.1.1",
+    "md5": "^1.0.0"
   }
 }
