--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xdls",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "A cross-domain local storage library.",
   "repository": {
     "type": "git",
@@ -8,6 +8,7 @@
   },
   "main": "./index.js",
   "scripts": {
+    "build": "mkdir -p build/ && cp $npm_package_main build/$npm_package_name-$npm_package_version.js && browserify -t [ babelify --presets [ es2015 ] --compact=true --comments=false --sourceMap ] $npm_package_main --standalone $npm_package_name --debug | exorcist build/$npm_package_name-$npm_package_version.min.js.map > build/$npm_package_name-$npm_package_version.min.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -23,16 +24,13 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "browserify": "^6.1.0",
-    "gulp": "^3.8.8",
-    "gulp-size": "^1.1.0",
-    "gulp-sourcemaps": "^1.2.4",
-    "gulp-uglify": "^1.0.1",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.0.0"
+    "babel-preset-es2015": "^6.24.1",
+    "babelify": "^7.3.0",
+    "browserify": "^14.4.0",
+    "exorcist": "^0.4.0"
   },
   "dependencies": {
-    "dataset": "^0.3.0",
+    "dataset": "^0.3.2",
     "md5": "^1.0.0"
   }
 }
